# cudaTspGenectic

./: CMakeLists.txt  README.md  testcases.h  tsp.cpp  tsp_genetic.cpp
include/: testcases.h
metrics/: tsp.txt  tsp_genetic.txt  tsp_genetic_cuda.txt
scripts/: build.sh
src/: CMakeLists.txt  tsp.cpp  tsp_genetic.cpp  tsp_genetic_cuda.cu
